# Hands-On-Large-Language-Models

./: .gitignore  README.md  kick_zscaler.py  main.py  pyproject.toml
chapter1/: generative_model.py  introduction.ipynb
chapter2/: different_tokenizers.py  song_recommendation.py  text_embeddings.py  token_embedding.py  tokenization.py  tokens-and-embeddings.ipynb  word2vec_learning.py
chapter3/: inside_llm.ipynb  review.py  simple_pipeline.py
chapter4/: chatgpt_classification.py  classification.py  classification_embedding.py  gen_model_classification.py  pretrained-model.ipynb  zero-shot-classification.py
chapter5/: arxiv.html  arxiv_chart.py  arxiv_nlp_clustering.py  text_clustering_topic_modeling.ipynb
