[project]
name = "hands-on-large-language-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "colorama>=0.4.6",
    "gensim>=4.4.0",
    "pandas>=3.0.3",
    "sentence-transformers>=5.5.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
